--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "type": "module",
   "scripts": {
     "dev:game": "vite build --watch",
-    "dev:devvit": "devvit playtest YOUR_DEV_SUBREDDIT",
+    "dev:devvit": "devvit playtest crosswordcorner",
     "dev": "concurrently -p \"[{name}]\" -n \"DEVVIT,GAME\" -c \"bgBlue.bold,bgMagenta.bold,bgGreen.bold\" \"npm run dev:devvit\" \"npm run dev:game\" --restart-tries 30",
     "vite": "vite",
     "upload": "devvit upload"
   },
   "dependencies": {
     "@devvit/public-api": "^0.11.4",
+    "animejs": "^3.2.2",
     "clsx": "^2.1.1",
     "motion": "11.11.15",
+    "raf": "^3.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.4",
@@ -22,7 +24,9 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.12",
     "@types/node": "22.8.7",
+    "@types/raf": "^3.4.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
