--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@devvit/public-api": "^0.11.4",
     "animejs": "^3.2.2",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.468.0",
     "motion": "11.11.15",
     "raf": "^3.4.1",
     "react": "^18.3.1",
