--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.4",
     "tsx": "4.19.2",
+    "use-sound": "^4.0.3",
     "zod": "3.23.8"
   },
   "devDependencies": {
